--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>hello</title>
-    <script src="main.js" defer async></script>
+    <script src="sayhi.js" defer async></script>
+    <script src="main.js" async></script>
   </head>
   <body>
     <h1>hello,world!</h1>
