Updated sha256sum example

--- a/web/src/examples/sha256sum/index.html
+++ b/web/src/examples/sha256sum/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>hello</title>
-    <script src="sayhi.js" defer async></script>
+    <script src="wasm-loader.js" defer async></script>
     <script src="main.js" async></script>
   </head>
   <body>
