--- a/web/src/examples/sha256sum/index.html
+++ b/web/src/examples/sha256sum/index.html
@@ -4,19 +4,6 @@
     <script src="main.js" async></script>
   </head>
   <body>
-    <div id="main">
-      <div>
-        <span>ChunksDid:</span>
-        <span id="chunks_did">ChunksDid:</span>
-      </div>
-      <div>
-        <span>ChunksTotal:</span>
-        <span id="chunks_total"></span>
-      </div>
-      <div>
-        <span>Result:</span>
-        <span id="result"></span>
-      </div>
-    </div>
+    <div id="main"></div>
   </body>
 </html>
